--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,6 +9,8 @@ package:
 source:
     git_rev: {{ version }}
     git_url: https://github.com/astrorama/Elements.git
+    patches:
+        - macos_path.patch          # [osx]
 
 build:
     number: {{ build_number }}
