--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,9 +24,11 @@ requirements:
         - cmake >=3.0
         - make
         - {{ compiler('cxx') }}
+        - libcxx<16
     host:
         - python
         - boost-cpp
+        - libcxx<16
         - log4cpp >=1.1.3
     run:
         - {{ pin_compatible('python', min_pin='x.x', max_pin='x.x') }}
