--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,13 +1,14 @@
 {% set name = "Elements" %}
-{% set version = "6.3.0" %}
-{% set build_number = 0 %}
+{% set version = "7.0.0" %}
+{% set rev = "release-7.0" %}
+{% set build_number = 5 %}
 
 package:
     name: {{ name|lower }} 
     version: {{ version }} 
 
 source:
-    git_rev: {{ version }}
+    git_rev: {{ rev }}
     git_url: https://github.com/astrorama/Elements.git
     patches:
         - macos_path.patch          # [osx]
