--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "Elements" %}
 {% set version = "6.3.2" %}
 {% set rev = "release-6.3" %}
-{% set build_number = 6 %}
+{% set build_number = 7 %}
 
 package:
     name: {{ name|lower }} 
@@ -25,11 +25,11 @@ requirements:
         - cmake >=3.0
         - make
         - {{ compiler('cxx') }}
-        - libcxx<16
+        - libcxx
     host:
         - python
         - boost-cpp
-        - libcxx<16
+        - libcxx
         - log4cpp >=1.1.3
     run:
         - {{ pin_compatible('python', min_pin='x.x', max_pin='x.x') }}
