--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "Elements" %}
-{% set version = "6.3.2" %}
-{% set rev = "release-6.3" %}
-{% set build_number = 7 %}
+{% set version = "6.3.3" %}
+{% set rev = "6.3.3" %}
+{% set build_number = 0 %}
 
 package:
     name: {{ name|lower }} 
