--- a/.ci_support/linux_64_python3.12.____cpython.yaml
+++ b/.ci_support/linux_64_python3.12.____cpython.yaml
@@ -1,20 +1,20 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.13'
+cdt_name:
+- conda
 channel_sources:
 - astrorama,conda-forge,defaults
 channel_targets:
 - astrorama main
 cxx_compiler:
-- clangxx
+- gxx
 cxx_compiler_version:
-- '16'
-macos_machine:
-- x86_64-apple-darwin13.4.0
+- '13'
+docker_image:
+- quay.io/condaforge/linux-anvil-x86_64:alma9
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.8.* *_cpython
+- 3.12.* *_cpython
 target_platform:
-- osx-64
+- linux-64
