--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@
 
 *.pyc
 
-# eclipse project files
-/.settings/
-/.pydevproject
-/.project
+# Rattler-build's artifacts are in `output` when not specifying anything.
+/output
+# Pixi's configuration
+.pixi
