--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "Elements" %}
 {% set version = "6.3.4" %}
 {% set rev = "6.3.4" %}
-{% set build_number = 2 %}
+{% set build_number = 3 %}
 
 package:
     name: {{ name|lower }} 
@@ -22,7 +22,7 @@ requirements:
     build:
         - python                             # [build_platform != target_platform]
         - cross-python_{{ target_platform }} # [build_platform != target_platform]
-        - cmake >=3.0
+        - cmake >=3.25,<4.0
         - make
         - {{ compiler('cxx') }}
         - libcxx
